# Aura

./: .gitignore  .project  CMakeLists.txt  Machinelearning_test.py  README.md  SpeechActivityDetection.py  SpeechDenoising.py  SpeechFingerprinting.py  SpeechRecognition.py  SpeechSteganography  Test.py  VAD.py  basic_features.py  basic_functions.py  setup.py  speech_features.py
aio/: aura_ai.h
cmake/: test_aec3.cmake  test_aecm.cmake  test_agc.cmake  test_agc_legacy.cmake  test_anr.cmake  test_vad.cmake  test_wav_io.cmake
common/: aura_common_datatype.h  aura_datatype.h  aura_log.h
common_audio/: fir_filter_neon.cc
common_audio/resampler/: sinc_resampler_avx2.cc  sinc_resampler_neon.cc  sinc_resampler_sse.cc
common_audio/signal_processing/: complex_bit_reverse_mips.c  complex_fft_mips.c  cross_correlation_mips.c  cross_correlation_neon.c  downsample_fast_mips.c  downsample_fast_neon.c  filter_ar_fast_q12_mips.c  min_max_operations_mips.c  min_max_operations_neon.c  vector_scaling_operations_mips.c
experiments/: registered_field_trials.h
images/: README.MD
lawliet/: __init__.py  io.py  utils.py
lawliet/array/: __init__.py  ssl.py
lawliet/augment/: __init__.py
lawliet/filter/: fir_filter.py
lawliet/io/: __init__.py  io.py
lawliet/mono/: __init__.py  denoise.py  resample.py  td_psola.py  vad.py
lawliet/watermarking/: lsb.py
models/: VAD.model
rtc_base/: platform_thread_types.cc
src/: lawliet_fft.cpp  lawliet_fft.h  lawliet_macros.h
src/NE10/: NE10_fft.c  (+3 more)
test/: lawliet_fft_test.cpp  test_aec3.cc  test_aecm.cc  test_agc.cc  test_agc_legacy.cc  test_anr.cc  test_vad.cc  test_wav_io.cc  test_wav_reader.cpp
toolchains/: aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake  x86_64-windows.cmake
utils/: basic_features.py  basic_functions.py
(+5 files in other folders)
